<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center">

    <Button
        android:id="@+id/button_pressure_node"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_pressure_node"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_power_node"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_power_node"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_switch_node"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_switch_node"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button_cabinet_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cabinet_data"
        android:textSize="30sp"/>

</LinearLayout>